Cadastro de endereço junto com cadastro de loja, falta ajustar relacionamento na model

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -43121,3 +43121,7 @@ a.text-muted:hover {
 .dark-mode .dark-mode.accent-gray-dark .page-item .page-link:hover, .dark-mode .dark-mode.accent-gray-dark .page-item .page-link:focus {
   color: #3f474e;
 }
+
+section.content{
+  margin-top: 20px;
+}
