--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,12 @@
 .img-wrapper{
     max-width: 100%;
+    height:30%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
+}
+.img-wrapper > img{
+    width: 100%;
 }
 @media screen and (min-width:576px) {
     .carousel-inner{
