--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,13 @@
 .img-wrapper{
     max-width: 100%;
-    height:30%;
+    height:15vw;
     display: flex;
     justify-content: center;
     align-items: flex-start;
 }
 .img-wrapper > img{
     width: 100%;
+    max-height:100%;
 }
 @media screen and (min-width:576px) {
     .carousel-inner{
